--- a/src/app/pages/register-form/components/create-form/create-form.component.scss
+++ b/src/app/pages/register-form/components/create-form/create-form.component.scss
@@ -23,3 +23,21 @@
   background-color: #40a9ff;
   color: white;
 }
+
+.text-label{
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.form-selection{
+  margin-top: 0px!important;
+  border: 1px solid #9d9d9d9d;
+  padding: 15px;
+}
+
+.preview{
+  width: 100%;
+  max-height: 500px;
+  overflow: scroll;
+}
