--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,22 +1,40 @@
 <nz-table
   #table
-  [nzData]="rows"
   class="table-width"
   nzOuterBordered
+  nzHideOnSinglePage
+  nzShowSizeChanger
+  [nzData]="rows"
+  [nzLoading]="loading"
+  [nzFrontPagination]="clientPagination"
+  [nzPageIndex]="page"
+  [nzPageSize]="pageSize"
+  [nzTotal]="pageTotal"
+  [nzFrontPagination]="clientPagination"
+  (nzPageIndexChange)="pageIndexChange.emit($event)"
+  (nzPageSizeChange)="pageSizeChange.emit($event)"
   [nzScroll]="{ x: '1500px', y: '590px' }"
 >
   <thead>
     <tr>
-      <th *ngFor="let column of columns" nzAlign="center"
-          [nzWidth]="column.width"
-          [nzLeft]="column.fixColumn === 'left'"
-          [nzRight]="column.fixColumn === 'right'"
+      <th *ngFor="let column of columns"
+        nzAlign="center"
+        [nzWidth]="column.width"
+        [nzLeft]="column.fixColumn === 'left'"
+        [nzRight]="column.fixColumn === 'right'"
       >
         <ng-container *ngIf="column.tplHeader">
           <ng-container *ngTemplateOutlet="column.tplHeader.template"></ng-container>
         </ng-container>
         <ng-container *ngIf="!column.tplHeader">
-          {{ column.header }}
+          <ng-container [ngSwitch]="column.dataType">
+            <ng-container *ngSwitchCase="COL_DATA_TYPE.SELECTION">
+              <input type="checkbox" [checked]="isChecked" (click)="onCheckedAll()">
+            </ng-container>
+            <ng-container *ngSwitchDefault>
+              {{ column.header }}
+            </ng-container>
+          </ng-container>
         </ng-container>
       </th>
     </tr>
@@ -40,6 +58,9 @@
             <ng-container *ngSwitchCase="COL_DATA_TYPE.INDEX">
               {{i + 1}}
             </ng-container>
+            <ng-container *ngSwitchCase="COL_DATA_TYPE.SELECTION">
+              <input type="checkbox" (click)="onItemChecked(data)" [checked]="setOfCheckedId.has(data.id)">
+            </ng-container>
             <ng-container *ngSwitchDefault>
               {{ data[column.key] }}
             </ng-container>
@@ -49,3 +70,5 @@
     </tr>
   </tbody>
 </nz-table>
+
+<!--<nz-pagination [nzPageIndex]="page" [nzTotal]="20" [nzPageSize]="pageSize" nzShowSizeChanger></nz-pagination>-->
