--- a/src/app/layouts/page-layout/page/page.component.html
+++ b/src/app/layouts/page-layout/page/page.component.html
@@ -3,6 +3,7 @@
   <nz-layout class="layout-content">
     <nz-header>
       <div class="app-header">
+        <app-header></app-header>
       </div>
     </nz-header>
     <nz-content class="app-content">
