--- a/src/app/pages/ticket/components/create-ticket/create-ticket.component.scss
+++ b/src/app/pages/ticket/components/create-ticket/create-ticket.component.scss
@@ -18,10 +18,6 @@
   border-radius: 4px;
 }
 
-.text-danger{
-  color: #ff4d4f;
-  width: 100%;
-}
 
 .primary {
   background-color: #40a9ff;
@@ -34,14 +30,12 @@
   font-weight: 600;
 }
 
-.form-selection{
-  margin-top: 0px!important;
-  border: 1px solid #9d9d9d9d;
-  padding: 15px;
+.text-danger{
+  color: red;
+  width: 100%;
 }
 
-.preview{
-  width: 100%;
-  max-height: 500px;
-  overflow: scroll;
+.width-50{
+  width: 50%;
 }
+
