--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.scss
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.scss
@@ -1,9 +1,24 @@
+.title-page{
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-bottom: 15px;
+}
+
 .text-valid {
   color: #52c41a;
 }
 
 .text-invalid {
   color: #ff4d4f;
+}
+
+.text-warning {
+  color: #faad14;
+}
+
+.table {
+  max-width: calc(100vw - 352px);
 }
 
 .custom-action{
@@ -23,3 +38,5 @@
   }
   border-radius: 4px;
 }
+
+
