--- a/src/app/pages/student/components/waiting-student/waiting-student.component.scss
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.scss
@@ -1,5 +1,8 @@
-.width-fit {
-  //max-width: 100vw;
+.title-page{
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-bottom: 15px;
 }
 
 .text-valid {
@@ -8,6 +11,10 @@
 
 .text-invalid {
   color: #ff4d4f;
+}
+
+.text-warning {
+  color: #faad14;
 }
 
 .table {
