--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -82,7 +82,7 @@
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
               <li nz-menu-item (click)="takeCareStudent(data)">Nhận chăm sóc</li>
-              <li nz-menu-item (click)="rejectStudent(data)">Không nhận</li>
+<!--              <li nz-menu-item (click)="rejectStudent(data)">Không nhận</li>-->
             </ul>
           </nz-dropdown-menu>
         </ng-template>
