--- a/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
+++ b/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
@@ -5,6 +5,7 @@
 <div class="header-btn">
   <ng-container *ngIf="(notificationsEmail$ | async) as notificationsEmail">
 
+    <button nz-button class="add-btn primary" (click)="create()">Thêm mới</button>
     <button nz-button class="add-btn primary" (click)="delete()">Xóa</button>
 
     <app-table
@@ -20,9 +21,9 @@
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Tên tổ chức" key="roleName" [width]="'200px'"></table-column>
-      <table-column header="Tên diễn giả" key="roleName" [width]="'200px'"></table-column>
-      <table-column header="Tên khóa học" key="roleName" [width]="'200px'"></table-column>
+      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Tên diễn giả" key="speakerName" [width]="'200px'"></table-column>
+      <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">Hiển thị</span>
