--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -27,13 +27,7 @@
     >
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Ngày đăng ký" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
-      <table-column header="Loại vé" key="ticket">
-        <ng-template appCell let-data>
-          <nz-tag [nzColor]="'red'" *ngIf="data.ticket === 'PREMIUM'">{{data.ticket}}</nz-tag>
-          <nz-tag [nzColor]="'blue'" *ngIf="data.ticket === 'FREE'">{{data.ticket}}</nz-tag>
-          <nz-tag [nzColor]="'gold'" *ngIf="data.ticket === 'VIP'">{{data.ticket}}</nz-tag>
-        </ng-template>
-      </table-column>
+      <table-column header="Loại vé" key="ticket"></table-column>
       <table-column header="Số tiền" key="price" [width]="'150px'"></table-column>
       <table-column header="Thanh toán" key="isPay" [width]="'180px'">
         <ng-template appCell let-data>
@@ -62,8 +56,8 @@
       </table-column>
       <table-column header="Trạng thái" key="isAccount" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.isAccount">Đã xác thực</span>
-          <span class="text-invalid" *ngIf="!data.isAccount">Chưa xác thực</span>
+          <span class="text-valid" *ngIf="data.isAccount">Có tài khoản</span>
+          <span class="text-invalid" *ngIf="!data.isAccount">Chưa có tài khoản</span>
         </ng-template>
       </table-column>
 
