--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -11,9 +11,8 @@
       </nz-collapse-panel>
     </nz-collapse>
 
-
-    <!--    <button nz-button class="add-btn primary" (click)="create()">Thêm mới</button>-->
-    <!--    <button nz-button class="add-btn primary" (click)="delete()">Xóa</button>-->
+    <button nz-button class="add-btn primary" (click)="takeCareStudent()">Chăm sóc</button>
+    <button nz-button class="add-btn primary" (click)="rejectStudent()">Từ chối</button>
 
     <app-table
       [rows]="waitingStudent.rows"
@@ -24,7 +23,9 @@
       (pageIndexChange)="page$.next($event)"
       (pageSizeChange)="pageSize$.next($event)"
       [loading]="loading"
+      (onItemSelection)="getItemSelection($event)"
     >
+      <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Ngày đăng ký" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Loại vé" key="ticket"></table-column>
@@ -69,17 +70,6 @@
         <ng-template appCell let-data>
           <span class="custom-action" (click)="detail(data)">Chi tiết</span>
 
-          <span class="custom-action" nz-dropdown nzTrigger="click" [nzDropdownMenu]="menu">
-          Chăm sóc
-          <span nz-icon nzType="down"></span>
-        </span>
-
-          <nz-dropdown-menu #menu="nzDropdownMenu">
-            <ul nz-menu>
-              <li nz-menu-item (click)="takeCareStudent(data)">Nhận chăm sóc</li>
-              <li nz-menu-item (click)="rejectStudent(data)">Không nhận</li>
-            </ul>
-          </nz-dropdown-menu>
         </ng-template>
       </table-column>
     </app-table>
