--- a/src/app/pages/student/components/waiting-student/waiting-student.component.scss
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.scss
@@ -39,4 +39,19 @@
   border-radius: 4px;
 }
 
+.add-btn {
+  min-width: 80px;
+  min-height: 36px;
+  margin-left: 8px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
 
+.header-btn{
+  text-align: right;
+}
+
+.primary {
+  background-color: #40a9ff;
+  color: white;
+}
