--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -12,7 +12,7 @@
     </nz-collapse>
 
 
-    <button nz-button class="add-btn primary" (click)="takeCareStudent()">Chăm sóc</button>
+    <button nz-button class="add-btn primary" (click)="takeCareStudent()">Nhận chăm sóc</button>
 <!--    <button nz-button class="add-btn primary" (click)="delete()">Xóa</button>-->
 
     <app-table
