--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -11,7 +11,7 @@
       </nz-collapse-panel>
     </nz-collapse>
 
-    <button nz-button class="add-btn primary" (click)="takeCareStudent()">Chăm sóc</button>
+    <button nz-button class="add-btn primary" (click)="takeCareStudent()">Nhận chăm sóc</button>
     <button nz-button class="add-btn primary" (click)="rejectStudent()">Từ chối</button>
 
     <app-table
