--- a/src/app/pages/class/components/class/class.component.html
+++ b/src/app/pages/class/components/class/class.component.html
@@ -1,17 +1,18 @@
 <div class="title-page">
-  Danh sách landing page
+  Danh sách lớp học
 </div>
 
 <div class="header-btn">
-
-  <ng-container *ngIf="(landingPage$ | async) as landingPage">
+  <ng-container *ngIf="(class$ | async) as class">
     <button nz-button class="add-btn primary" (click)="create()">Thêm mới</button>
     <button nz-button class="add-btn primary" (click)="delete()">Xóa</button>
+
+
     <app-table
-      [rows]="landingPage.rows"
-      [page]="landingPage.page"
-      [pageSize]="landingPage.pageSize"
-      [pageTotal]="landingPage.rowTotal"
+      [rows]="class.rows"
+      [page]="class.page"
+      [pageSize]="class.pageSize"
+      [pageTotal]="class.rowTotal"
       (onItemSelection)="getItemSelection($event)"
       [clientPagination]="false"
       (pageIndexChange)="page$.next($event)"
@@ -20,19 +21,12 @@
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Ngày tạo" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
-      <table-column header="Tên diễn giả" key="speakerName" [width]="'200px'"></table-column>
+      <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
-      <table-column header="Tên landing page" key="name" [width]="'200px'"></table-column>
-      <table-column header="Mã landing page" key="landingPageCode" [width]="'200px'"></table-column>
-      <table-column header="Trạng thái" key="status" [width]="'180px'">
-        <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.status">Hiển thị</span>
-          <span class="text-invalid" *ngIf="!data.status">Không hiển thị</span>
-        </ng-template>
-      </table-column>
-
+      <table-column header="Tên lớp học" key="attendanceProgramName" [width]="'200px'"></table-column>
+      <table-column header="Tên buổi học" key="lessonName" [width]="'200px'"></table-column>
+      <table-column header="Khung giờ" key="attendanceTimeFrame" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
           Chức năng
@@ -45,3 +39,4 @@
     </app-table>
   </ng-container>
 </div>
+
