--- a/src/app/pages/class/components/create-class/create-class.component.scss
+++ b/src/app/pages/class/components/create-class/create-class.component.scss
@@ -18,10 +18,6 @@
   border-radius: 4px;
 }
 
-.text-danger{
-  color: #ff4d4f;
-  width: 100%;
-}
 
 .primary {
   background-color: #40a9ff;
@@ -34,22 +30,7 @@
   font-weight: 600;
 }
 
-.form-selection{
-  margin-top: 0px!important;
-  border: 1px solid #9d9d9d9d;
-  padding: 15px;
-}
-
-.preview{
+.text-danger{
+  color: red;
   width: 100%;
-  max-height: 500px;
-  overflow: scroll;
-}
-
-input:read-only {
-  background: #F5F5F5;
-}
-
-nz-select{
-  display: block;
 }
