feature add class and lesson

--- a/src/app/pages/class/components/create-class/create-class.component.html
+++ b/src/app/pages/class/components/create-class/create-class.component.html
@@ -6,7 +6,7 @@
   <div nz-col [nzSpan]="20">
     <form [formGroup]="classForm">
       <div nz-row [nzGutter]=[16,16]>
-        <div nz-col [nzSpan]="8">
+        <div nz-col [nzSpan]="9">
           <span class="text-label">
             Tên lớp học
             <span class="text-danger">*</span>
@@ -22,7 +22,39 @@
           </span>
         </div>
 
+        <div nz-col [nzSpan]="9">
+          <span class="text-label">
+            Khóa học
+            <span class="text-danger">*</span>
+          </span>
+
+          <div>
+            <nz-select [nzDisabled]="!isCreate"
+                       style="display: block"
+                       formControlName="courseId"
+                       [nzStatus]="(classForm.get('courseId')?.invalid && (classForm.get('courseId')?.touched || isSubmit)) ? 'error' : ''"
+            >
+              <nz-option
+                *ngFor="let course of listCourse"
+                [nzValue]="course.id"
+                [nzLabel]="course.title"
+              ></nz-option>
+            </nz-select>
+          </div>
+
+          <span class="text-danger"
+                *ngIf="(classForm.get('courseId')?.touched || isSubmit) && classForm.get('courseId')?.hasError('required')"
+          >
+            Tên khóa học không được để trống
+          </span>
+        </div>
+
         <div nz-col [nzSpan]="24">
+          <div style="text-align: right;padding-bottom: 8px">
+            <button nz-button nzType="primary" (click)="addLesson()">
+              <span nz-icon nzType="plus"></span>
+            </button>
+          </div>
           <nz-list nzBordered nzHeader="Danh sách buổi học" >
             <nz-list-item
                 *ngFor="let lesson of listLesson">
