--- a/src/app/pages/class/components/create-class/create-class.component.html
+++ b/src/app/pages/class/components/create-class/create-class.component.html
@@ -12,13 +12,13 @@
             <span class="text-danger">*</span>
           </span>
           <input
-            nz-input autofocus formControlName="title"
-            [nzStatus]="(classForm.get('title')?.invalid && (classForm.get('title')?.touched || isSubmit)) ? 'error' : ''">
+            nz-input autofocus formControlName="name"
+            [nzStatus]="(classForm.get('name')?.invalid && (classForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(classForm.get('title')?.touched || isSubmit)  && classForm.get('title')?.hasError('required')"
+                *ngIf="(classForm.get('name')?.touched || isSubmit)  && classForm.get('name')?.hasError('required')"
           >
-            Tên khóa học không được để trống
+            Tên lớp học không được để trống
           </span>
         </div>
 
@@ -49,19 +49,19 @@
           </span>
         </div>
 
-        <div nz-col [nzSpan]="24">
-          <div style="text-align: right;padding-bottom: 8px">
-            <button nz-button nzType="primary" (click)="addLesson()">
-              <span nz-icon nzType="plus"></span>
-            </button>
-          </div>
-          <nz-list nzBordered nzHeader="Danh sách buổi học" >
-            <nz-list-item
-                *ngFor="let lesson of listLesson">
-              {{lesson.name}}
-            </nz-list-item>
-          </nz-list>
-        </div>
+<!--        <div nz-col [nzSpan]="24">-->
+<!--          <div style="text-align: right;padding-bottom: 8px">-->
+<!--            <button nz-button nzType="primary" (click)="addLesson()">-->
+<!--              <span nz-icon nzType="plus"></span>-->
+<!--            </button>-->
+<!--          </div>-->
+<!--          <nz-list nzBordered nzHeader="Danh sách buổi học" >-->
+<!--            <nz-list-item-->
+<!--                *ngFor="let lesson of listLesson">-->
+<!--              {{lesson.name}}-->
+<!--            </nz-list-item>-->
+<!--          </nz-list>-->
+<!--        </div>-->
       </div>
     </form>
   </div>
